<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="app_name">GATT Client</string>

    <string name="scan_start_toast">Scanning for</string>
    <string name="seconds">seconds.</string>
    <string name="already_scanning">Scanning already started.</string>

    <!-- New items -->
    <string name="label_income_string">Income String:</string>
    <string name="label_income_data">Income Data:</string>
    <string name="label_service">Service 1</string>
    <string name="label_characteristic1">Characteristic 1</string>
    <string name="label_characteristic2">Characteristic 2</string>
    <string name="label_characteristic3">Characteristic 3</string>
    <string name="label_read">Read</string>
    <string name="label_write">Write</string>
    <string name="label_write_sms">Write SMS</string>
    <string name="label_write_phonecall">Write PhoneCall</string>
    <string name="label_write_whatsapp">Write Whats App</string>
    <string name="label_write_op97">Write OP=97</string>
    <string name="label_write_op99">Write OP=99</string>
    <string name="label_notify">Notify</string>
    <string name="connected_with_subscribe">Connected (Notification subscribed)</string>
    <string name="connected_with_unsubscribe">Connected</string>
    <string name="label_write_string">Write string :</string>
    <string name="label_write_single_command_string">Write command :</string>
    <string name="label_write_opcode_string">OPCode :</string>
    <string name="label_write_command_code_string">Command :</string>
    <string name="label_write_command_value_string">Value :</string>
    <string name="label_hint">...</string>
    <string name="label_ok">OK</string>
    <string name="label_title_error">Error :</string>
    <string name="label_error_msg_write_single_cmd">The command is not supported.</string>
    <string name="label_loading">File transferring… Please wait.</string>
    <string name="label_read_file_fail">Read file fail !</string>
</resources>
